crates/demo-app-server/tests/snapshots/api__bad_id.snap
---
source: crates/demo-app-server/tests/api.rs
expression: "&json"
---
{
  "error": {
    "code": "validation_error",
    "message": "invalid input: item id must start with \"itm_\"",
    "request_id": "[request_id]"
  }
}
