crates/demo-app-server/tests/snapshots/api__create.snap
---
source: crates/demo-app-server/tests/api.rs
expression: "&created"
---
{
  "created_at_ms": "[timestamp]",
  "id": "[id]",
  "name": "pen"
}
