crates/demo-app-server/tests/snapshots/api__list.snap
---
source: crates/demo-app-server/tests/api.rs
expression: "&page"
---
{
  "items": [
    {
      "created_at_ms": "[timestamp]",
      "id": "[id]",
      "name": "pen"
    }
  ],
  "next_offset": null
}
