crates/demo-app-server/tests/snapshots/api__wrong_method.snap
---
source: crates/demo-app-server/tests/api.rs
expression: "&json"
---
{
  "error": {
    "code": "method_not_allowed",
    "message": "Method Not Allowed",
    "request_id": "[request_id]"
  }
}
